feat(contrib): uart_reader Version 4 submission (#54)
* New uart_reader base

* Window splitting

* serial thread

* parameters refined

* added more functionality to the menu bar (not tested)

* Working and tested file clearing

* Brand new database, and advances to the audio system

* Start of logging, and full serial module implementation

* Polished the 3 modules

* Big progress new UI. Everything working good, audio window

* mel window functinal 50%

* basic graph ui donne, and organisation

* Correct Basic Database for settings

* Bug fixing of the database

* First few GUI implementations of the new database

* First steps in the database GUI

* Finished V2 of the database

* started the new uart_reader V5 and fixed the database gui

* Model trainer V2 and Databse V4. Because i can't get things straight

* Almost 50% donne with V3 of the model trainer, but Qt is so hard

* Big Cleanup

* Start of readme, and a few fixes for V4. Re-read of V4

* Rabling in the README.md

I couldn't commit this for some reason, so its 2 separate commits

* Update uart_readerV4.py

I hope i didn't break everything

* mel window should work, but yet to test. Need model.pckl

* Working mels

* new database backend prototype, corrections and start of the classificator wrapper

* Correct pickled items are given back from formatter

* History works and model fix

* final touchups and ready for pull request

* Fixes and changes for cross compatibility

* [pre-commit.ci] auto fixes from pre-commit.com hooks

for more information, see https://pre-commit.ci

* Cleanup and ready for push

* Delete debug.log

I don't know where this is from

* Small cleanup before optimizations

* small cleanup before fixes from the feedback

* Fixed a few thinsg, added saving to audio, broke the mel model system, weird bug

* Everything now compiles and fixed the classifier by adding to the pyproject.toml a new script for the model formatter

* Repaired the import and export of the database

* Added 2 co

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ authors = [
 description = "The best project for the best students"
 name = "LELEC210X"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = "==3.9.*"
 version = "0.1.0"
 
 [tool.ruff]
@@ -25,7 +25,7 @@ extend-ignore = [
   "E501",
 ]
 extend-select = ["B", "C90", "D", "I", "N", "RUF", "UP", "T"]
-isort = {known-first-party = ["auth", "classification", "common", "leaderboard", "mcu"]}
+isort = {known-first-party = ["auth", "classification", "common", "contrib", "leaderboard"]}
 line-length = 88
 
 [tool.rye]
@@ -39,7 +39,7 @@ managed = true
 virtual = true
 
 [tool.rye.workspace]
-members = ["auth", "classification", "common", "leaderboard", "mcu"]
+members = ["auth", "classification", "common", "contrib", "leaderboard"]
 
 [tool.uv]
 dev-dependencies = [
@@ -47,8 +47,8 @@ dev-dependencies = [
   "auth",
   "classification",
   "common",
+  "contrib[all]",
   "leaderboard",
-  "mcu",
   # Dev dependencies
   "pre-commit>=3.5.0",
   "pygments>=2.18.0",
@@ -60,8 +60,8 @@ dev-dependencies = [
 auth = {workspace = true}
 classification = {workspace = true}
 common = {workspace = true}
+contrib = {workspace = true}
 leaderboard = {workspace = true}
-mcu = {workspace = true}
 
 [tool.uv.workspace]
-members = ["auth", "classification", "common", "leaderboard", "mcu"]
+members = ["auth", "classification", "common", "contrib", "leaderboard"]
