--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@
 # MELVEC_LENGTH = 20
 
 AUTH_KEY = ""
-LOCAL_KEY = ""
-CONTEST_KEY = ""
+LOCAL_KEY = "Qt_p5kBuyYwy7Rl1HuR7gwKV89Twe94jWuAy1"
+CONTEST_KEY = "8ufSPzUGDSqBtJlpHZq4FLOJPoIjYpFxGEngjh1r"
