--- a/classification/pyproject.toml
+++ b/classification/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "soundfile>=0.12.1",
     "tqdm>=4.66.5",
     "pylint>=3.3.5",
+    "optuna>=4.2.1",
 ]
 name = "classification"
 requires-python = ">= 3.9"
