--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 requires-python = "==3.9.*"
 version = "0.1.0"
 dependencies = [
-    "optuna>=4.2.1",
+    "pylint>=3.3.6",
 ]
 
 [tool.ruff]
